Further Updates to deep merge core and client meta data

--- a/app/styles/lumen.scss
+++ b/app/styles/lumen.scss
@@ -3755,6 +3755,6 @@ a{
   background-color: lightgrey;
 }
 
-.marginForScopeViewButtons{
-  border : 2px solid blue;
+.seperatorBorder{
+  border : 2px solid #00afd8;
 }
